--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lý-thuyết-học-vẽ---v01",
+  "name": "copy-of-phim-pixel---v2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
